add requests for events in open api
