# polzunov-feast-server/src/main/java/com/example/polzunovfeastserver/security/SecurityConfig.java
@@ -38,6 +38,11 @@ public class SecurityConfig {
                 .authorizeHttpRequests(requests -> requests
                         .requestMatchers("/user/signin", "/user/signup").permitAll()
                         .requestMatchers(HttpMethod.GET, "/event/{id}", "/event").permitAll()
+                        //TODO remove permissions below, when admin will be added
+                        .requestMatchers(HttpMethod.POST, "/event").permitAll()
+                        .requestMatchers(HttpMethod.PUT, "/event").permitAll()
+                        .requestMatchers(HttpMethod.DELETE, "/event{id}").permitAll()
+
                         .anyRequest().authenticated()
                 )
                 .oauth2ResourceServer(OAuth2ResourceServerConfigurer::jwt)
